--- a/client/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -1,3 +1,16 @@
 .text-center {
   text-align: center;
 }
+
+table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+td {
+  padding-right: 8px;
+}
+
+.mini-fab-add {
+  margin: 5px
+}
